# snowflake-dbt-test

./: .gitignore  Dockerfile  README.md  dbt_project.yml  pyproject.toml
macros/: generate_schema_name.sql  safe_cast.sql
models/data_mart/: mart_vw_active_employees.sql  schema.yml
models/dw/: dim_customers.sql  dim_sales_channels.sql  dim_warehouses.sql  fct_inventory_snapshots.sql  fct_orders.sql  fct_payments.sql  fct_returns.sql  fct_shipments.sql
models/health_demo/data_mart/: drug_analysis.sql  insurance_analysis.sql  schema.yml  trials_overview.sql
models/health_demo/dw/: dim_clinical_trials.sql  dim_drugs.sql  dim_patients.sql  dim_physicians.sql  fct_adverse_events.sql  fct_drug_assignments.sql  fct_trial_enrollments.sql  schema.yml
models/health_demo/lnd/: raw_adverse_events.sql  raw_clinical_trials.sql  raw_drugs.sql  raw_patients.sql  raw_physicians.sql  raw_trial_drug_assignments.sql  raw_trial_enrollments.sql  schema.yml
models/health_demo/stg/: schema.yml  stg_adverse_events.sql  stg_clinical_trials.sql  stg_drugs.sql  stg_patients.sql  stg_physicians.sql  stg_trial_drug_assignments.sql  stg_trial_enrollments.sql
models/stg/: stg_employees.sql
models/warehouse/data_mart/: mart_inventory_risk.sql  schema.yml  (+2 more)
seeds/health_demo/: adverse_events.csv  clinical_trials.csv  drugs.csv  patients.csv  physicians.csv  trial_drug_assignments.csv  trial_enrollments.csv
snapshots/health_demo/: snap_adverse_events.sql  snap_drug_assignments.sql  snap_enrollments.sql
snapshots/warehouse/: snap_employees.sql
tests/: test_no_self_managers.sql
(+6 files in other folders)
